# PersonalFinanceManager

./: .gitignore  Makefile  README.md  auth-taskdef-corrected.json  auth-taskdef-fixed.json  docker-compose.yml  finance-tracker-key.pem  gateway-taskdef-corrected.json  gateway-taskdef-updated.json  gateway-taskdef.json  user-data.sh  web-taskdef.json
.github/workflows/: build-android-apk.yml  deploy.yml
frontend/web/: Dockerfile  nginx.conf  package.json
frontend/web/public/: index.html
frontend/web/src/: App.tsx
infrastructure/aws/: cdk.context.json  cleanup-ecr.sh  free_tier_deploy.sh  monitor_and_cleanup.sh  package-lock.json  package.json  precise_fix_script.sh
infrastructure/aws/lib/: rapilot-infrastructure-stack.ts
mobile/: README.md  android-network-security-config.xml  app.json  package-lock.json  package.json
mobile/plugins/: withAndroidNetworkSecurityConfig.js
mobile/src/: App.tsx
mobile/src/components/: Login.tsx  (+24 more)
services/analytics/: Dockerfile  requirements.txt
services/analytics-engine/: CMakeLists.txt  Dockerfile
services/analytics-engine/src/: main.cpp
services/auth/: Dockerfile  package.json
services/category/: Dockerfile  package.json
services/category-merge/: Dockerfile  package.json
services/expense/: Dockerfile  package.json
services/gateway/: Dockerfile  package.json
services/income/: Dockerfile  package.json
services/ml-engine/: CMakeLists.txt  Dockerfile
services/receipt-processor/: Dockerfile  requirements.txt
services/reporting-engine/: CMakeLists.txt  Dockerfile
services/reporting-engine/src/: main.cpp
(+142 files in other folders)
